# arachne

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: docs.yml  python-app.yml
docs/source/: API.rst  conf.py  index.rst
docs/source/getting_started/: index.rst  installation.rst  quickstart.rst
examples/: train_emulator.py
examples/fit_galaxy/: fit_gmm.py  fit_pixel_map.py
scripts/: diagnose_parrot_emulator.py  fit_catalogue.py  fit_catalogue2.py  fit_catalogue_nss.py  fit_mock_jwst.py  fit_one_galaxy.py  fit_sed.py  generate_mock_jwst.py  merge_nss_workers.py  optimize_parrot_emulator.py  plot_nss_corners.py  plot_zspec_comparison.py  train_parrot_emulator.py  validate_parrot_emulator.py
src/arachne/: __init__.py
src/arachne/data/: observation.py  psf.py
src/arachne/emulator/: base.py  jax_emulator.py  jax_mlp_emulator.py  parrot_emulator.py
src/arachne/forward_model/: pipeline.py
src/arachne/inference/: mclmc_sampler.py  nuts_sampler.py
src/arachne/likelihood/: gaussian.py
src/arachne/priors/: physical.py  spatial.py
src/arachne/psf/: convolution.py
src/arachne/spatial/: base.py  gmm.py  pixel_map.py
src/arachne/utils/: io.py  logging.py
tests/: conftest.py  test_emulator.py  test_forward_model.py  test_inference.py  test_likelihood.py  test_mclmc_sampler.py  test_mlp_emulator.py  test_observation.py  test_parrot_emulator.py  test_physical_priors.py  test_psf.py  test_spatial.py  test_spatial_priors.py
