[project]
name = "arachne"
version = "0.1.0"
description = "Image-level forward modelling of galaxy populations with spatially-resolved SED fitting"
license = {file = "LICENSE.md"}
readme = "README.md"

keywords = [
    "galaxy",
    "SED-fitting",
    "forward modelling",
    "spatially-resolved",
    "PSF",
    "NUTS",
    "HMC",
    "JAX",
    "Bayesian inference",
    "galaxy formation",
    "cosmology",
    "stellar populations",
    "JWST",
]

authors = [
    { name = "arachne contributors" },
]

requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "blackjax>=1.2.0",
    "optax>=0.1.7",
    "astropy>=5.3",
    "synference",
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.9",
    "tqdm",
    "matplotlib",
    "corner",
]

[project.optional-dependencies]
dev = ["ruff==0.11.7", "pre-commit", "nb-clean"]
test = ["pytest", "ruff==0.11.7"]
docs = [
    "sphinx==7.4.7",
    "furo",
    "sphinx_autodoc_typehints",
    "nbsphinx",
    "sphinx-copybutton",
]

[project.urls]
"Homepage" = "https://github.com/arachne-project/arachne"
"Bug Reports" = "https://github.com/arachne-project/arachne/issues"
"Source" = "https://github.com/arachne-project/arachne"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arachne"]

# Configure the linter and formatter
[tool.ruff]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    ".DS_Store",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".pre-commit-config.yaml",
    "*__init__.py",
]

line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "D"]
ignore = [
    "E402",
    "F811",
]

extend-select = ["I"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "gpu: marks tests as requiring a GPU (deselect with '-m \"not gpu\"')",
]
testpaths = ["tests"]
